RESOLVED FIXED128299
Fix the build after r163516 for !ENABLE(ASYNC_SCROLLING) platforms
https://bugs.webkit.org/show_bug.cgi?id=128299
Summary Fix the build after r163516 for !ENABLE(ASYNC_SCROLLING) platforms
Csaba Osztrogonác
Reported 2014-02-06 00:23:32 PST
/mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/Source/WebKit2/UIProcess/WebPageProxy.cpp: In function 'bool WebKit::anyTouchIsInNonFastScrollableRegion(WebKit::RemoteScrollingCoordinatorProxy&, const WebKit::WebTouchEvent&)': /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/Source/WebKit2/UIProcess/WebPageProxy.cpp:1379:33: error: invalid use of incomplete type 'class WebKit::RemoteScrollingCoordinatorProxy' In file included from /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/Source/WebKit2/UIProcess/WebPageProxy.cpp:28:0: /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/Source/WebKit2/UIProcess/WebPageProxy.h:143:7: error: forward declaration of 'class WebKit::RemoteScrollingCoordinatorProxy' /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/Source/WebKit2/UIProcess/WebPageProxy.cpp:1379:78: error: 'class WebKit::WebPlatformTouchPoint' has no member named 'location' /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/Source/WebKit2/UIProcess/WebPageProxy.cpp: In member function 'void WebKit::WebPageProxy::handleTouchEvent(const WebKit::NativeWebTouchEvent&)': /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/Source/WebKit2/UIProcess/WebPageProxy.cpp:1396:51: error: 'm_scrollingCoordinatorProxy' was not declared in this scope Fix is coming soon.
Attachments
Patch (2.41 KB, patch)
2014-02-06 00:35 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2014-02-06 00:35:45 PST
Created attachment 223314 [details] Patch WIP patch for EWS and will be tested locally too
Csaba Osztrogonác
Comment 2 2014-02-06 00:51:44 PST
Comment on attachment 223314 [details] Patch It builds on EFL locally, so set r?
Csaba Osztrogonác
Comment 3 2014-02-06 00:56:44 PST
Comment on attachment 223314 [details] Patch Clearing flags on attachment: 223314 Committed r163526: <http://trac.webkit.org/changeset/163526>
Csaba Osztrogonác
Comment 4 2014-02-06 00:56:50 PST
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 5 2014-02-06 09:02:31 PST
Sorry for the breakage.
Note You need to log in before you can comment on or make changes to this bug.