Fix the build after r163516 for !ENABLE(ASYNC_SCROLLING) platforms https://bugs.webkit.org/show_bug.cgi?id=128299

Reviewed by Antti Koivisto.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::handleTouchEvent):

Canonical link: https://commits.webkit.org/146310@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163526 268f45cc-cd09-0410-ab3c-d52691b4dbfc